Fixed info,warning,danger box icon padding overlapping the text

--- a/resources/sass/markdown.scss
+++ b/resources/sass/markdown.scss
@@ -67,7 +67,7 @@
         @apply relative border-l-4 my-4 p-6 pl-16;
 
         &:before {
-            @apply absolute top-0 left-0 p-6 text-xl;
+            @apply absolute top-0 left-0 py-6 pl-6 text-xl;
         }
 
         > *:first-child {
